--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body oncontextmenu="return false;">
     <div id="mtoast" onclick="this.style.display='none'"></div>
     <video loop muted autoplay>
-        <source src="https://stra.to/dl/BVQulFoOjDx9Zy7fFuxv/0220.mp4">
+        <source src="https://kimi4427.github.io/ffastats/background.mp4">
     </video>
     <h1>HGLABOR FFA Stats</h1>
     <div class="search-container">
@@ -30,6 +30,28 @@
         <div id="loading" class="loading" style="display: none;">Dein Internet ist langsam...</div>
     </div>
     <!-- <button class="fetchbtn" onclick="fetchStats()"></button>-->
+    <details>
+  <summary>Keybinds and Shortcuts</summary>
+
+<table class="keybinds">
+  <tr>
+    <th>Key</th>
+    <th>Info</th>
+  </tr>
+  <tr>
+    <td>#</td>
+    <td>Dark & Whitemode</td>
+  </tr>
+<tr>
+    <td>-</td>
+    <td>Hide Skin</td>
+  </tr>
+  <tr>
+    <td>+</td>
+    <td>Dein Traum</td>
+  </tr>
+</table>
+</details>
  <script src="main.js"></script> 
 </body>
 </html>
