--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
     <td>+</td>
     <td>Dein Traum</td>
   </tr>
+  <tr>
+    <td>,</td>
+    <td>Credits</td>
+   </tr>
 </table>
 </details>
  <script src="main.js"></script> 
