--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <video loop muted autoplay>
         <source src="https://kimi4427.github.io/ffastats/background.mp4">
     </video>
+    <div class="container">
+        <div class="btn-holder">
+            <button class="fetchbtn" type="button" id="runnrcBtn" onclick="window.location.href = 'minecraft.html';">Noriskclient Launcher</button>
+        </div>
+    </div>
+   
     <h1>HGLABOR FFA Stats</h1>
     <div class="search-container">
         <input type="text" id="uuidInput" placeholder="Minecraft UUID/NAME">
